# LabWork_6-7

./: CMakeLists.txt  README.md  main.cpp
Sources/: Checking_condition.cpp  Digits.cpp  Read_XY.cpp  Recording_answer.cpp
inc/: Header.h
